Release ...
* [nt]roff: The input line number is now adjusted at a different place,
  fixing many glitches which previously caused it to be wrong.
* tbl: The ".lf" troff request is now used internally to adjust troff's
  idea of the current input file and line number, making troff warnings
  more helpful.
* tbl: The ".warn" troff request is now used internally to save, disable,
  and restore warning messages around those portions of tbl output which
  use potentially undefined requests or registers.
* pic: The comments before ".PS" containing bounding box information are
  now prefixed by '.\"' instead of '...' for compatibility with ".warn".
* [nt]roff: The "\n[.warn]" number register is now properly changed after
  a call to ".warn" with no arguments.
* pic/dpost: The PostScript implementation of the "Dl" (draw line)
  operation now rounds the current point to the troff device resolution
  when testing for equality. This is another fix for "box fill 0" in pic.
* troff/dpost: A "x X LC_CTYPE localename" device command has been added.
  This ensures that troff and dpost use the same locale for generating
  PDF bookmark entries.

Release 060208
* troff: Eastern European characters for Unicode/PostScript conversion
  have been added (patch by Vladimir B. Machulsky).
* troff, dpost: Font file names can now contain spaces or bytes outside
  the ASCII range. A "%xx" escape sequence, where "xx" are hexadecimal
  digits, has been introduced in order to achieve this. The description
  of ".fp" in the "NEWS" file contains details on this.
* [nt]roff: The ".vpt" request has been added to make it possible to
  disable vertical position traps.
* dpost: With the ".track" command, the tracking amount was not properly
  initialized at every page of PostScript output. This could result in
  incorrect arrangements of characters.
* [nt]roff: Diagnostic messages now include the number of the current
  output page.
* [nt]roff: Page breaks inside a diversion are now properly ignored.