@@ -22,7 +22,7 @@
 /*
  * Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)unimap.c	1.12 (gritter) 1/19/06
+ * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
  */
 
 #include <stdlib.h>
@@ -69,107 +69,108 @@ const struct rawunimap	rawunimap[] = {
 	{ 0x00BE,	"threequarters" },
 	{ 0x00BF,	"questiondown" },
 	{ 0x00C0,	"Agrave" },
-	{ 0x00C0,	"Agravesmall" },
 	{ 0x00C1,	"Aacute" },
-	{ 0x00C1,	"Aacutesmall" },
 	{ 0x00C2,	"Acircumflex" },
-	{ 0x00C2,	"Acircumflexsmall" },
 	{ 0x00C3,	"Atilde" },
-	{ 0x00C3,	"Atildesmall" },
 	{ 0x00C4,	"Adieresis" },
-	{ 0x00C4,	"Adieresissmall" },
 	{ 0x00C5,	"Aring" },
-	{ 0x00C5,	"Aringsmall" },
 	{ 0x00C6,	"AE" },
-	{ 0x00C6,	"AEsmall" },
 	{ 0x00C7,	"Ccedilla" },
-	{ 0x00C7,	"Ccedillasmall" },
 	{ 0x00C8,	"Egrave" },
-	{ 0x00C8,	"Egravesmall" },
 	{ 0x00C9,	"Eacute" },
-	{ 0x00C9,	"Eacutesmall" },
 	{ 0x00CA,	"Ecircumflex" },
-	{ 0x00CA,	"Ecircumflexsmall" },
 	{ 0x00CB,	"Edieresis" },
-	{ 0x00CB,	"Edieresissmall" },
 	{ 0x00CC,	"Igrave" },
-	{ 0x00CC,	"Igravesmall" },
 	{ 0x00CD,	"Iacute" },
-	{ 0x00CD,	"Iacutesmall" },
 	{ 0x00CE,	"Icircumflex" },
-	{ 0x00CE,	"Icircumflexsmall" },
 	{ 0x00CF,	"Idieresis" },
-	{ 0x00CF,	"Idieresissmall" },
 	{ 0x00D0,	"Eth" },
-	{ 0x00D0,	"Ethsmall" },
 	{ 0x00D1,	"Ntilde" },
-	{ 0x00D1,	"Ntildesmall" },
 	{ 0x00D1,	"Ntildealt" },		/* BulmerMT-ItalicAlt */
 	{ 0x00D2,	"Ograve" },
-	{ 0x00D2,	"Ogravesmall" },
 	{ 0x00D2,	"Ogravealt" },		/* BulmerMT-ItalicAlt */
 	{ 0x00D3,	"Oacute" },
-	{ 0x00D3,	"Oacutesmall" },
 	{ 0x00D3,	"Oacutealt" },		/* BulmerMT-ItalicAlt */
 	{ 0x00D4,	"Ocircumflex" },
-	{ 0x00D4,	"Ocircumflexsmall" },
 	{ 0x00D4,	"Ocircumflexalt" },	/* BulmerMT-ItalicAlt */
 	{ 0x00D5,	"Otilde" },
-	{ 0x00D5,	"Otildesmall" },
 	{ 0x00D5,	"Otildealt" },		/* BulmerMT-ItalicAlt */
 	{ 0x00D6,	"Odieresis" },
-	{ 0x00D6,	"Odieresissmall" },
 	{ 0x00D6,	"Odieresisalt" },	/* BulmerMT-ItalicAlt */
 	{ 0x00D7,	"multiply" },
 	{ 0x00D8,	"Oslash" },
-	{ 0x00D8,	"Oslashsmall" },
 	{ 0x00D8,	"Oslashalt" },		/* BulmerMT-ItalicAlt */
 	{ 0x00D9,	"Ugrave" },
-	{ 0x00D9,	"Ugravesmall" },
 	{ 0x00DA,	"Uacute" },
-	{ 0x00DA,	"Uacutesmall" },
 	{ 0x00DB,	"Ucircumflex" },
-	{ 0x00DB,	"Ucircumflexsmall" },
 	{ 0x00DC,	"Udieresis" },
-	{ 0x00DC,	"Udieresissmall" },
 	{ 0x00DD,	"Yacute" },
-	{ 0x00DD,	"Yacutesmall" },
 	{ 0x00DD,	"Yacutealt" },		/* BulmerMT-ItalicAlt */
 	{ 0x00DE,	"Thorn" },
-	{ 0x00DE,	"Thornsmall" },
 	{ 0x00DF,	"germandbls" },
 	{ 0x00E0,	"agrave" },
+	{ 0x00E0,	"Agravesmall" },
 	{ 0x00E1,	"aacute" },
+	{ 0x00E1,	"Aacutesmall" },
 	{ 0x00E2,	"acircumflex" },
+	{ 0x00E2,	"Acircumflexsmall" },
 	{ 0x00E3,	"atilde" },
+	{ 0x00E3,	"Atildesmall" },
 	{ 0x00E4,	"adieresis" },
+	{ 0x00E4,	"Adieresissmall" },
 	{ 0x00E5,	"aring" },
+	{ 0x00E5,	"Aringsmall" },
 	{ 0x00E6,	"ae" },
+	{ 0x00E6,	"AEsmall" },
 	{ 0x00E7,	"ccedilla" },
+	{ 0x00E7,	"Ccedillasmall" },
 	{ 0x00E8,	"egrave" },
+	{ 0x00E8,	"Egravesmall" },
 	{ 0x00E9,	"eacute" },
+	{ 0x00E9,	"Eacutesmall" },
 	{ 0x00EA,	"ecircumflex" },
+	{ 0x00EA,	"Ecircumflexsmall" },
 	{ 0x00EB,	"edieresis" },
+	{ 0x00EB,	"Edieresissmall" },
 	{ 0x00EC,	"igrave" },
+	{ 0x00EC,	"Igravesmall" },
 	{ 0x00ED,	"iacute" },
+	{ 0x00ED,	"Iacutesmall" },
 	{ 0x00EE,	"icircumflex" },
+	{ 0x00EE,	"Icircumflexsmall" },
 	{ 0x00EF,	"idieresis" },
+	{ 0x00EF,	"Idieresissmall" },
 	{ 0x00F0,	"eth" },
+	{ 0x00F0,	"Ethsmall" },
 	{ 0x00F1,	"ntilde" },
+	{ 0x00F1,	"Ntildesmall" },
 	{ 0x00F2,	"ograve" },
+	{ 0x00F2,	"Ogravesmall" },
 	{ 0x00F3,	"oacute" },
+	{ 0x00F3,	"Oacutesmall" },
 	{ 0x00F4,	"ocircumflex" },
+	{ 0x00F4,	"Ocircumflexsmall" },
 	{ 0x00F5,	"otilde" },
+	{ 0x00F5,	"Otildesmall" },
 	{ 0x00F6,	"odieresis" },
+	{ 0x00F6,	"Odieresissmall" },
 	{ 0x00F7,	"divide" },
 	{ 0x00F8,	"oslash" },
+	{ 0x00F8,	"Oslashsmall" },
 	{ 0x00F9,	"ugrave" },
+	{ 0x00F9,	"Ugravesmall" },
 	{ 0x00FA,	"uacute" },
+	{ 0x00FA,	"Uacutesmall" },
 	{ 0x00FB,	"ucircumflex" },
+	{ 0x00FB,	"Ucircumflexsmall" },
 	{ 0x00FC,	"udieresis" },
+	{ 0x00FC,	"Udieresissmall" },
 	{ 0x00FD,	"yacute" },
+	{ 0x00FD,	"Yacutesmall" },
 	{ 0x00FE,	"thorn" },
+	{ 0x00FE,	"Thornsmall" },
 	{ 0x00FF,	"ydieresis" },
+	{ 0x00FF,	"Ydieresissmall" },
 	{ 0x0100,	"Amacron" },
 	{ 0x0101,	"amacron" },
 	{ 0x0102,	"Abreve" },
@@ -236,9 +237,8 @@ const struct rawunimap	rawunimap[] = {
 	{ 0x013F,	"Ldot" },
 	{ 0x0140,	"ldot" },
 	{ 0x0141,	"Lslash" },
-	{ 0x0141,	"Lslashsmall" },
-	{ 0x0141,	"lslash" },
 	{ 0x0142,	"lslash" },
+	{ 0x0142,	"Lslashsmall" },
 	{ 0x0143,	"Nacute" },
 	{ 0x0144,	"nacute" },
 	{ 0x0145,	"Ncommaaccent" },
@@ -255,8 +255,8 @@ const struct rawunimap	rawunimap[] = {
 	{ 0x0150,	"Ohungarumlaut" },
 	{ 0x0151,	"ohungarumlaut" },
 	{ 0x0152,	"OE" },
-	{ 0x0152,	"OEsmall" },
 	{ 0x0153,	"oe" },
+	{ 0x0153,	"OEsmall" },
 	{ 0x0154,	"Racute" },
 	{ 0x0155,	"racute" },
 	{ 0x0156,	"Rcommaaccent" },
@@ -270,8 +270,8 @@ const struct rawunimap	rawunimap[] = {
 	{ 0x015E,	"Scedilla" },
 	{ 0x015F,	"scedilla" },
 	{ 0x0160,	"Scaron" },
-	{ 0x0160,	"Scaronsmall" },
 	{ 0x0161,	"scaron" },
+	{ 0x0161,	"Scaronsmall" },
 	{ 0x0162,	"Tcommaaccent" },
 	{ 0x0163,	"tcommaaccent" },
 	{ 0x0164,	"Tcaron" },
@@ -295,15 +295,14 @@ const struct rawunimap	rawunimap[] = {
 	{ 0x0176,	"Ycircumflex" },
 	{ 0x0177,	"ycircumflex" },
 	{ 0x0178,	"Ydieresis" },
-	{ 0x0178,	"Ydieresissmall" },
 	{ 0x0178,	"Ydieresisalt" },	/* BulmerMT-ItalicAlt */
 	{ 0x0179,	"Zacute" },
 	{ 0x017A,	"zacute" },
 	{ 0x017B,	"Zdotaccent" },
 	{ 0x017C,	"zdotaccent" },
 	{ 0x017D,	"Zcaron" },
-	{ 0x017D,	"Zcaronsmall" },
 	{ 0x017E,	"zcaron" },
+	{ 0x017E,	"Zcaronsmall" },
 	{ 0x017F,	"longs" },
 	{ 0x0192,	"florin" },
 	{ 0x01A0,	"Ohorn" },
